# fastaudit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
fastaudit/: __init__.py  core.py  hooks.py
tests/: test_core.py  test_cython.py
tests/cython_src/: cyprobe.pyx
