[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastaudit"
description = "A lightweight execution guard for running LLM-generated Python in a normal Python process."

dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Answer.AI" }]
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", ]

dependencies = [ "fastcore", ]

[project.optional-dependencies]
dev = [ "pytest", "orjson", "numpy", "nbformat", "regex", "exhash", "cython", "fastship", "build", "twine", ]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/fastaudit"

[project.entry-points.fastaudit_safe_native]
_regex = "_regex"
numpy = "numpy"
orjson = "orjson"
rpds = "rpds"
pydantic = "pydantic_core"
regex_regex = "regex._regex"

[tool.setuptools.dynamic]
version = { attr = "fastaudit.__version__" }

[tool.setuptools.packages.find]
include = ["fastaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
